--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.44.0",
     "@aws-cdk/aws-iam": "^1.44.0",
+    "@aws-cdk/aws-kinesis": "^1.44.0",
     "@aws-cdk/aws-sns": "^1.44.0",
     "@aws-cdk/aws-sqs": "^1.44.0",
     "@aws-cdk/core": "^1.44.0"
