--- a/package.json
+++ b/package.json
@@ -25,25 +25,25 @@
     "test": "jest --collectCoverage"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "^1.44.0",
+    "@aws-cdk/assert": "1.49.1",
     "@types/jest": "^24.0.22",
     "@types/node": "10.17.5",
-    "@typescript-eslint/eslint-plugin": "^3.1.0",
-    "@typescript-eslint/parser": "^3.1.0",
-    "eslint": "^7.2.0",
+    "@typescript-eslint/eslint-plugin": "^3.5.0",
+    "@typescript-eslint/parser": "^3.5.0",
+    "eslint": "^7.4.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
-    "typescript": "^3.7.5"
+    "typescript": "^3.9.6"
   },
   "peerDependencies": {
-    "@aws-cdk/core": "^1.44.0"
+    "@aws-cdk/core": "1.49.1"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.44.0",
-    "@aws-cdk/aws-iam": "^1.44.0",
-    "@aws-cdk/aws-kinesis": "^1.44.0",
-    "@aws-cdk/aws-sns": "^1.44.0",
-    "@aws-cdk/aws-sqs": "^1.44.0",
-    "@aws-cdk/core": "^1.44.0"
+    "@aws-cdk/aws-apigateway": "1.49.1",
+    "@aws-cdk/aws-iam": "1.49.1",
+    "@aws-cdk/aws-kinesis": "1.49.1",
+    "@aws-cdk/aws-sns": "1.49.1",
+    "@aws-cdk/aws-sqs": "1.49.1",
+    "@aws-cdk/core": "1.49.1"
   }
 }
