--- a/.github/workflows/release-published.yml
+++ b/.github/workflows/release-published.yml
@@ -13,7 +13,7 @@ jobs:
         with:
           node-version: 12
           registry-url: https://registry.npmjs.org/
-      - run: npm install
+      - run: npm ci
       - run: npm run build
       - run: npm run test
       - run: npm publish --access public
