--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cdk-rest-api-integrations",
   "description": "This CDK constructs library integrates AWS RestApi (a.k.a ApiGateway) with other AWS Services",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "keywords": [
     "cdk",
     "apigateway",
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.40.0",
-    "@types/jest": "^26.0.8",
+    "@types/jest": "^24.0.22",
     "@types/node": "10.17.5",
     "@typescript-eslint/eslint-plugin": "^3.5.0",
     "@typescript-eslint/parser": "^3.5.0",
@@ -36,14 +36,19 @@
     "typescript": "^3.9.6"
   },
   "peerDependencies": {
-    "@aws-cdk/core": "^1.40.0"
+    "@aws-cdk/core": "^1.40.0",
+    "@aws-cdk/aws-apigateway": "^1.40.0",
+    "@aws-cdk/aws-iam": "^1.40.0",
+    "@aws-cdk/aws-kinesis": "^1.40.0",
+    "@aws-cdk/aws-sns": "^1.40.0",
+    "@aws-cdk/aws-sqs": "^1.40.0"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "1.40.0",
-    "@aws-cdk/aws-iam": "1.40.0",
-    "@aws-cdk/aws-kinesis": "1.40.0",
-    "@aws-cdk/aws-sns": "1.40.0",
-    "@aws-cdk/aws-sqs": "1.40.0",
-    "@aws-cdk/core": "1.40.0"
+    "@aws-cdk/aws-apigateway": "^1.40.0",
+    "@aws-cdk/aws-iam": "^1.40.0",
+    "@aws-cdk/aws-kinesis": "^1.40.0",
+    "@aws-cdk/aws-sns": "^1.40.0",
+    "@aws-cdk/aws-sqs": "^1.40.0",
+    "@aws-cdk/core": "^1.40.0"
   }
 }
